--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -82,7 +82,10 @@
 \usepackage{bookmark}
 
 % Math
+\usepackage{amsmath}
 \usepackage{mathtools}
+
+\newcommand{\norm}[1]{\lVert #1 \rVert}
 
 % Tables and charts
 \usepackage{caption}
