--- a/report/figure-table-best-window-size.tex
+++ b/report/figure-table-best-window-size.tex
@@ -56,7 +56,7 @@
       precision=3,
     },
   every head row/.style={after row=\hline},
-  skip rows between index={0}{1},
+  best/.style={@cell content=\underline{#1}},
 }
 
 \pgfplotstableset{
@@ -73,28 +73,58 @@
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=static_language=en_window=0-50_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      every row 8 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=static_language=en_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{English}
   \end{subfigure}
   \par\bigskip\par\bigskip
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=static_language=fi_window=0-50_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      every row 0 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=static_language=fi_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{Finnish}
   \end{subfigure}
   \par\bigskip\par\bigskip
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=static_language=hr_window=0-50_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      every row 3 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=static_language=hr_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{Croatian}
   \end{subfigure}
   \par\bigskip\par\bigskip
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=static_language=sl_window=0-50_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      skip rows between index={3}{4},
+      every row 0 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=static_language=sl_window=0-50_operation=sum_similarity=cosine_top_1.csv}
     \caption{Slovene}
   \end{subfigure}
-  \caption{The window size that maximises the score for static-embedding models.}
+  \caption{The window size that maximises the score for static-embedding models with
+    the additive composition operation. The best score for each language is underlined.}
 \end{figure}
 
 \begin{figure}
@@ -103,26 +133,56 @@
   \captionsetup{justification=centering}
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=contextual_language=en_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      every row 4 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=contextual_language=en_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{English}
   \end{subfigure}
   \par\bigskip\par\bigskip
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=contextual_language=fi_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      every row 3 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=contextual_language=fi_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Finnish}
   \end{subfigure}
   \par\bigskip\par\bigskip
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=contextual_language=hr_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      every row 0 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=contextual_language=hr_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Croatian}
   \end{subfigure}
   \par\bigskip\par\bigskip
   \begin{subfigure}[b]{\textwidth}
     \centering
-    \pgfplotstabletypeset{../results/model=contextual_language=sl_window=0-10_operation=sum_similarity=cosine_top_1.csv}
+    \pgfplotstabletypeset[
+      skip rows between index={3}{4},
+      every row 1 column 2/.append style={
+          postproc cell content/.append code={
+              \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
+              \pgfkeysalso{best/.expand once={\besttemp}}
+            },
+        },
+    ]{../results/model=contextual_language=sl_window=0-10_operation=sum_similarity=cosine_top_1.csv}
     \caption{Slovene}
   \end{subfigure}
-  \caption{The window size that maximises the score for contextual-embedding models.}
+  \caption{The window size that maximises the score for contextual-embedding models with
+    the additive composition operation. The best score for each language is underlined.}
 \end{figure}
