--- a/report/content.tex
+++ b/report/content.tex
@@ -264,7 +264,8 @@ The results that I have given must be interpreted in context: the original submi
 authors did not have access to the evaluation dataset prior to submitting their results,
 only the `practice kit' of very few instances, and were therefore unable to optimise a
 parameter such as the window size prior to submission.
-With this caveat, I achieved several notable results:
+Additionally, the models that I used were not necessarily available to the authors.
+With these caveats, I achieved several notable results:
 \begin{itemize}
   \item The contextual embeddings of \texttt{EMBEDDIA/crosloengual-bert} with a window
         size of three would have placed second among the Croatian submissions
