--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -152,6 +152,10 @@
 
 \section{Appendix}
 
+\subsection{Cost-benefit analysis of contextual embeddings}
+
+\import{.}{figure-chart-score-time}
+
 \subsection{Language-specificity of window-size effects}
 \label{appendix:window-size}
 
