--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -95,6 +95,7 @@
 \usepackage{multirow}
 \usepackage{tabularx}
 \usepackage[draft]{graphicx}
+\usepackage{tablefootnote}
 
 \def\imagebox#1#2{\vtop to #1{\null\hbox{#2}\vfill}}
 
@@ -140,7 +141,7 @@
 
 \begin{document}
 
-\title{Graded Similarity in Context}
+\title{Graded word similarity in context by composing static and contextual embeddings}
 \author{Tim Lawson}
 \date{\today}
 
