--- a/report/content.tex
+++ b/report/content.tex
@@ -14,7 +14,7 @@ count-based and predictive models of word meaning\footnote{ This terminological
 } originally
 produced a single representation for each word in the model's vocabulary.
 One of these \emph{static} representations must, therefore, encode all of a word's
-senses and connotations, which is an obstacle to its use in modelling context-dependent
+senses and connotations, which may obstruct its use in modelling context-dependent
 phenomena.
 
 Prior to the widespread availability of pre-trained word embeddings
@@ -47,11 +47,12 @@ a fixed-size context window.
 The first subtask of SemEval-2020 Task 3 is to predict the direction and magnitude of
 the change in the human judgment of similarity of the same pair of target words in two
 different contexts.
-The task is unsupervised: the CoSimLex dataset was used to evaluate the task submissions
-but only a minimal `practice kit' of fewer than ten instances was provided in advance.
-CoSimLex extends the well-known SimLex-999 dataset \parencite{Hill2015} to include
-contexts for each pair in English ($n = 340$), Finnish ($n = 24$), Croatian ($n = 112$),
-and Slovene ($n = 111$) \parencite[39-42]{Armendariz2020}.
+The task is unsupervised: the submissions were evaluated on the CoSimLex dataset
+\parencite[39-42]{Armendariz2020} but only a minimal `practice kit' of fewer than ten
+instances was provided in advance.
+CoSimLex is an extension of SimLex-999 \parencite{Hill2015} that consists of pairs of
+target words and their contexts in four languages: English ($n = 340$), Finnish
+($n = 24$), Croatian ($n = 112$), and Slovene ($n = 111$).
 
 The score for the first subtask was computed by the uncentered (zero-mean) Pearson
 correlation coefficient between the predicted changes in similarity and the human
@@ -63,75 +64,116 @@ This metric is equivalent to the cosine similarity between the two vectors of re
   = \frac{\vec{\hat{y}} \cdot \vec{y}}{\norm{\vec{\hat{y}}} \norm{\vec{y}}}
 \end{equation}
 A consequence of this choice of evaluation metric is that composing representations by
-addition and their arithmetic mean produce the same results; hence, I elected only to
-evaluate the simpler operatoin of addition among the two.
+addition or the arithmetic mean produces the same results; hence, I elected to only
+evaluate addition between them.
 
 \section{Related work}
 
-Additive composition \parencites[e.g.][]{Kintsch2001}{Mitchell2008}{Mikolov2013a}.
-Analysis of the effect of window size on static embeddings.
-Analysis of contextual embeddings.
+Many context-based approaches to word-sense disambiguation have been proposed since the
+advent of count-based models of word meaning.
+In \textcite{Landauer1997}'s introduction of Latent Semantic Analysis (LSA), the authors
+argued that taking the average of the high-dimensional representation of a word with
+those of its immediate context may be sufficient to determine the word's contextual
+meaning \parencite*[229-230]{Landauer1997}.
+The contextualisation of representations of word meanings is intimately related to their
+composition to form representations of phrase and sentence meanings.
+This connection is evident in \textcite{Kintsch2001}, who proposed a procedure to
+modify the vector of a predicate according to the argument in its context, and
+the adaptation by \textcite{Mitchell2008} of \citeauthor{Kintsch2001}'s evaluation
+methodology to alternative composition operations.
+Vector addition and averaging continue to be `surprisingly effective' means to
+compose word embeddings \parencite[10]{Boleda2020}, and addition produces plausible
+results for the word-analogy task \parencite[e.g.][]{Mikolov2013a}.
 
-Contextual-embedding models have found broad success on benchmarks that involve language
-understanding.
-A survey of contextual embeddings is given by \textcite{Liu2020}.
-However, as \textcite{Arora2020} point out, these models require significantly greater
-computational resources relative to static-embedding models.
-THe authors demonstrated that static embeddings `perform surprisingly well' on
-named-entity recognition and sentiment analysis tasks when there is adequate training
-data and it is linguistically simple.
-Furthermore, \textcite{Gupta2019} and \textcite{Bommasani2020} have demonstrated that
-static-embeddings can be obtained from contextual-embedding models that outperform
-prior static models while retaining their computational advantages.
+Nevertheless, models that produce contextual embeddings have achieved widespread
+success on benchmarks that involve language understanding.
+As \textcite{Arora2020} point out, this comes at a significant computational cost, and
+static embeddings may be sufficient for many tasks.
+Furthermore, \textcite{Gupta2019} and \textcite{Bommasani2020} have shown that
+static embeddings can be obtained from contextual-embedding models, which outperform
+the embeddings of static models while retaining their computational advantages.
 
 \section{Methodology}
 
 \begin{figure}
   \label{fig:schematic-procedure}
   \centering
-  \captionsetup{justification=centering}
-  \newcommand{\period}{.}
+  \newcommand{\period}{\text{.}}
   \newcommand*{\orawidest}{accept}
   \newcommand*{\oratallest}{\#\#}
   \newlength{\orawidth}
   \settowidth{\orawidth}{\orawidest}
   \newcommand*{\ora}[1]{\overrightarrow{#1\vphantom{\oratallest}}}
-  \begin{tikzpicture}[node distance=0.75in]
-    \node [label] (a) {\dots from the Isenj\period{} He \underline{accepts} their offer but knows that \dots};
-    \node [label, below of=a] (b) {\dots \#\#nj \period{} he \underline{accept} \#\#s their offer \dots};
-    \node [label, below of=b] (c) {\dots \#\#nj \period{} \underline{he accept \#\#s} their offer \dots};
-    \node [label, below of=c] (d) {$\big\{\,\ora{\text{he}}\,,\ \ora{\text{accept}}\,,\ \ora{\text{\#\#s}}\,\big\}$};
-    \node [label, below of=d] (e) {$\ora{\textit{accept}}=\ora{\text{he}}+\ora{\text{accept}}+\ora{\text{\#\#s}}$};
-    \draw [thick, ->] (a) -- (b) node[midway, right=1in] {1. Find first sub-word token};
-    \draw [thick, ->] (b) -- (c) node[midway, right=1in] {2. Find tokens in a fixed-size window};
-    \draw [thick, ->] (c) -- (d) node[midway, right=1in] {3. Obtain representations};
-    \draw [thick, ->] (d) -- (e) node[midway, right=1in] {4. Combine representations};
+  \begin{tikzpicture}[
+      node distance = 1in,
+      every node/.style = {
+          inner sep = 0,
+          outer sep = 0.2in
+        }
+    ]
+    \node [label] (a) {
+      \dots from the Isenj\period{} He \underline{accepts} their offer but knows that \dots
+    };
+    \node [label, below of=a] (b) {$\left[
+          \dots\,,\
+          \text{\#\#nj}\,,\
+          \period{}\,,\
+          \text{he}\,,\
+          \text{\underline{accept}}\,,\
+          \text{\#\#s}\,,\
+          \text{their}\,,\
+          \text{offer}\,,\
+          \dots
+          \right]$};
+    \node [label, below of=b] (c) {$\left[
+          \,
+          \text{he}\,,\
+          \text{accept}\,,\
+          \text{\#\#s}
+          \,
+          \right]$};
+    \node [label, below of=c] (d) {$\left[
+          \
+          \ora{\text{he}}\,,\
+          \ora{\text{accept}}\,,\
+          \ora{\text{\#\#s}}
+          \
+          \right]$};
+    \node [label, below of=d] (e) {$
+        \ora{\textit{accept}} =
+        \ora{\text{he}} +
+        \ora{\text{accept}} +
+        \ora{\text{\#\#s}}
+      $};
+    \draw [thick, ->] (a) -- (b) node[midway, right=0.25in] {1. Find first sub-word token};
+    \draw [thick, ->] (b) -- (c) node[midway, right=0.25in] {2. Find tokens in a fixed-size window};
+    \draw [thick, ->] (c) -- (d) node[midway, right=0.25in] {3. Obtain representations};
+    \draw [thick, ->] (d) -- (e) node[midway, right=0.25in] {4. Combine representations};
   \end{tikzpicture}
   \caption{A schematic of the procedure used to obtain a contextualised representation
     of a target word from pre-trained static or contextual embeddings. In this example,
-    the target word is ``accept'', the window size is three, and the composition
-    operation is addition.}
+    the target word is ``accept'', the window size is one (either side of the target
+    word), and the composition operation is addition.}
 \end{figure}
 
 \begin{figure}
   \label{fig:language-models}
   \centering
-  \captionsetup{justification=centering}
   \begin{tabular}{lcccc}
     Model name & English    & Finnish    & Croatian   & Slovene
     \\
     \hline
-    \texttt{EMBEDDIA/crosloengual-bert}
-               & \checkmark & \checkmark & \checkmark & \checkmark
-    \\
-    \texttt{bert-base-cased}
-               & \checkmark &            &            &
-    \\
     \texttt{bert-base-multilingual-cased}
                & \checkmark & \checkmark & \checkmark & \checkmark
     \\
     \texttt{bert-base-multilingual-uncased}
                & \checkmark & \checkmark & \checkmark & \checkmark
+    \\
+    \texttt{EMBEDDIA/crosloengual-bert}\textsuperscript{1}
+               & \checkmark & \checkmark & \checkmark & \checkmark
+    \\
+    \texttt{bert-base-cased}
+               & \checkmark &            &            &
     \\
     \texttt{bert-base-uncased}
                & \checkmark &            &            &
@@ -139,30 +181,35 @@ prior static models while retaining their computational advantages.
     \texttt{bert-large-cased}
                & \checkmark &            &            &
     \\
-    \texttt{bert-large-cased-whole-word-masking}
+    \texttt{bert-large-uncased}
                & \checkmark &            &            &
     \\
-    \texttt{bert-large-uncased}
+    \texttt{bert-large-cased-whole-word-masking}
                & \checkmark &            &            &
     \\
     \texttt{bert-large-uncased-whole-word-masking}
                & \checkmark &            &            &
     \\
-    \texttt{classla-bcms-bertic}
+    \texttt{classla-bcms-bertic}\textsuperscript{2}
                &            &            & \checkmark &
     \\
-    \texttt{TurkuNLP/bert-base-finnish-cased-v1}
+    \texttt{TurkuNLP/bert-base-finnish-cased-v1}\textsuperscript{3}
                &            & \checkmark &            &
     \\
-    \texttt{TurkuNLP/bert-base-finnish-uncased-v1}
+    \texttt{TurkuNLP/bert-base-finnish-uncased-v1}\textsuperscript{3}
                &            & \checkmark &            &
     \\
-    \texttt{TurkuNLP/bert-large-finnish-cased-v1}
+    \texttt{TurkuNLP/bert-large-finnish-cased-v1}\textsuperscript{3}
                &            & \checkmark &            &
     \\
   \end{tabular}
   \caption{The pre-trained models available via the HuggingFace \emph{Transformers}
-    library \parencite{Wolf2020} that I chose to evaluate for each language.}
+    library \parencite{Wolf2020} that I chose to evaluate for each language. The
+    corresponding references are
+    \textsuperscript{1}\textcite{Ulcar2020},
+    \textsuperscript{2}\textcite{Ljubesic2021},
+    \textsuperscript{3}\textcite{Virtanen2019}, and
+    \textcite{Devlin2019} otherwise.}
 \end{figure}
 
 Originally, it would not have been possible to optimise a parameterised model for the
@@ -185,20 +232,21 @@ for the contextual-embedding variants, I used the models' outputs.
 Several of the submissions to SemEval-2020 Task 3 used a combination of the weights of a
 Transformer model's hidden states \parencites[e.g.,][276]{Gamallo2020}[3]{Pessutto2020}[4]{Hettiarachchi2021}; a thorough comparison of the performance of variants
 of this approach is beyond the scope of this paper.
+
 Notably, the use of a sub-word vocabulary by these models
 \parencite[e.g.,][4174]{Devlin2019} dictates that a target word may be represented by a
 different number of tokens in each context.
 As a result, the representations of a pair of target words may be different in each
 context, even if they are static and the window size is zero.
-This explains the non-zero scores obtained by models of this kind
+This is the cause of the non-zero scores obtained by models of this kind
 (Section~\ref{appendix:window-size}), particularly for the Finnish language.
 
-Inspired by \textcite{Kintsch2001} and \textcite{Mitchell2008}, I predominantly
-investigated the application of element-wise addition and multiplication as composition
-operations.
+Inspired by \textcite{Landauer1997}, \textcite{Kintsch2001}, and
+\textcite{Mitchell2008}, I predominantly investigated the application of element-wise
+addition and multiplication as composition operations.
 However, preliminary experiments indicated that multiplication performed poorly across
 all languages, models, and window sizes; hence, it was discarded before the final
-evaluation.
+analysis.
 Additionally, I chose to evaluate the concatenation (`stacking') of embeddings.
 In the case that the number of embeddings was fewer than the context-window size, i.e.,
 the target word was close to the beginning or the end of its context, I right-padded the
