--- a/report/content.tex
+++ b/report/content.tex
@@ -257,6 +257,8 @@ concatenated embedding with zeros to obtain contextual embeddings of equal lengt
 \subsection{Cost-benefit analysis of contextual embeddings}
 \label{sec:cost-benefit}
 
+\import{.}{figure-chart-score-time}
+
 \subsection{Language-specificity of window-size effects}
 
 Generally, I found that the scores obtained by both static- and contextual-embedding
@@ -283,6 +285,9 @@ A similar argument applies to contextual embeddings, in that a target word may b
 represented by multiple sub-word tokens.
 The window sizes that maximise the score for each language and model are given in
 Table~\ref{table:best-window-size}.
+
+\import{.}{figure-table-best-window-size}
+\import{.}{figure-chart-score-window}
 
 \section{Discussion}
 
