--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -137,7 +137,13 @@
 
 \maketitle
 
-\import*{.}{content.tex}
+\import*{.}{section-introduction.tex}
+\import*{.}{section-task-definition.tex}
+\import*{.}{section-related-work.tex}
+\import*{.}{section-methodology.tex}
+\import*{.}{section-results.tex}
+\import*{.}{section-discussion.tex}
+\import*{.}{section-conclusion.tex}
 
 \printbibliography
 
